# Ultimate-Rust-for-Systems-Programming

./: .gitignore  CODEOWNERS  CONTRIBUTING.adoc  LICENSE  README.adoc  README.md
chapter-1/: chapter-1.ipynb
chapter-2/: chapter-2.ipynb
chapter-3/: chapter-3.ipynb
chapter-4/: chapter-4.ipynb  my_set.json
chapter-5/: chapter-5.ipynb  esports_data.csv
chapter-6/: chapter-6.ipynb
chapter-7/: chapter-7.ipynb
chapter-8/: chapter-8.ipynb
chapter-8/1-find-replace/: Cargo.toml
chapter-8/2-multiple-args/: Cargo.toml
chapter-8/3-flag-args/: Cargo.toml
chapter-8/4-advanced-args/: Cargo.toml
chapter-8/5-reading-files/: Cargo.toml
chapter-8/6-find-replace-logic/: Cargo.toml
chapter-8/7-writing-to-file/: Cargo.toml  file.txt
chapter-8/8-case-insensitive-search/: Cargo.toml
chapter-8/9-multiple-input-files/: Cargo.toml
chapter-9/: chapter-9.ipynb  config.json  shared_file.txt
chapter-9/asynchronous-networking/: Cargo.toml
chapter-9/networking-libraries/: Cargo.toml
chapter-9/networking-libraries/src/: main.rs
chapter_10/: chapter-10.ipynb
chapter_11/: chapter-11.ipynb
chapter_11/1-basic-test-function/: Cargo.toml  cobertura.xml
chapter_11/2-test-modules/: Cargo.toml
chapter_12/: chapter-12.ipynb
chapter_12/1-building-networked-applications/: Cargo.toml
chapter_12/4-handle-http-requests-with-hyper/: Cargo.toml
chapter_12/4-handle-http-requests-with-hyper/src/: main.rs
chapter_13/: chapter-13.ipynb
chapter_14/: chapter-14.ipynb
chapter_15/data-viz/: Cargo.toml  index.html
chapter_15/data-viz/src/: lib.rs
chapter_15/data-viz/tests/: web.rs
(+58 files in other folders)
